--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jspdf": "^2.5.1",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
+    "next-themes": "^0.3.0",
     "papaparse": "^5.4.1",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
